--- a/Zana-E14/exercise2.html
+++ b/Zana-E14/exercise2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HelloWorld</title>
+    <title>Hello</title>
 </head>
 <body>
     <p>Hello World!</p>
