--- a/shenoa-e14/index.html
+++ b/shenoa-e14/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Hello, World!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>website</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+<p>xxx</p> 
 </body>
 </html>
-
     
