--- a/shenoa-e14/index.html
+++ b/shenoa-e14/index.html
@@ -6,7 +6,11 @@
     <title>website</title>
 </head>
 <body>
-<p>xxx</p> 
+<p>xxx 
+    <strong>xxx</strong>
+    <em>xxx</em>
+    <span>xxx</span>
+</p> 
 </body>
 </html>
     
