Correct exercise_4 page title

--- a/Estelle-E14/exercise_4.html
+++ b/Estelle-E14/exercise_4.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Calculating the Sum of Two Numbers</title>
+  <title>Generating a Random Number</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script src="javascript/exercise_4.js" defer></script>
 </head>
