added examples for E14

--- a/Max-E14/index.html
+++ b/Max-E14/index.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Welcome!</h1>
     <p>This is our website...</p>
+    <p>
+        This is an example of a paragraph that includes <strong>bold text</strong>, <em>italicized text</em>,
+        <u>underlined text</u>, and a <span style="color: blue;">colored text</span>.
+    </p>
 </body>
 
 </html>
