Sync Day 15 exercises

--- a/Estelle-E14/exercise_5.html
+++ b/Estelle-E14/exercise_5.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Exercise: Your Choice</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/styles2.css" />
   <script src="javascript/exercise_5.js" defer></script>
 </head>
 
@@ -16,7 +16,11 @@ Test the functionality to ensure it works as expected.
 -->
 
 <body>
-
+  <textarea placeholder="Please enter your paragraph!" id="paragraphInput" rows="10" cols="40"></textarea>
+  <br>
+  <button id="checkCountsButton">Get Counts</button>
+  <br>
+  <div id="resultBox"></div>
 </body>
 
 </html>
