--- a/shenoa-e14/June 14 Day 28/MorningLectures/Queues.html
+++ b/shenoa-e14/June 14 Day 28/MorningLectures/Queues.html
@@ -11,6 +11,8 @@
         <button onclick="enqueue()">Enqueue</button>
         <button onclick="dequeue()">Dequeue</button>
         <p>Queue: <span id='queue'></span></p>
+        
+    </div>
     </div>
     <script>const queue = [];
         const queueDisplay = document.getElementById('queue');
