--- a/shenoa-e14/June 11 Day 25/index.html
+++ b/shenoa-e14/June 11 Day 25/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>June 12 Day 26</title>
-    
+    <title>June 11 Day 25</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>June 12 Day 26</h1>
-    <h1>Objects</h1>
+    <h1>June 11 Day 25</h1>
+    <h1>Arrays in Practice</h1>
     <div id="morning-lectures-container">
         <h2>Morning Lectures</h2>
         <div id="morning-lectures">
-            <a href="objects.html" class="lecture-link">
+            <a href="arrays.html" class="lecture-link">
                 <div class="lecture-section">
-                    <h3>Objects</h3>
-                    <p>In JavaScript, an object is a collection of key-value pairs where the keys are strings (or symbols) and the values can be of any type. Objects are used to store related data and functionality, with each key-value pair called a property and functions assigned to object properties called methods.</p>
-                </div>
-            </a>
-            <a href="registrationform.html" class="lecture-link">
-                <div class="lecture-section">
-                    <h3>Registration Form</h3>
+                    <h3>Student Array</h3>
                     <p></p>
                 </div>
             </a>
+            <a href="bubblesort.html" class="lecture-link">
+                <div class="lecture-section">
+                    <h3>placeholder</h3>
+                    <p></p>
+                </div>
+            </a>
+            <a href="insertionsort.html" class="lecture-link">
+                <div class="lecture-section">
+                    <h3>placeholder</h3>
+                    <p></p>
+                </div>
+            </a>
+        </a>
+
         </div>
     </div>
     <div id="afternoon-exercises-container">
