--- a/shenoa-e14/June 17 Day 29/index.html
+++ b/shenoa-e14/June 17 Day 29/index.html
@@ -6,34 +6,30 @@
 </head>
 <body>
     <h1>June 17 Day 29</h1>
+    <h1>Algorithms</h1>
     <div id="morning-lectures-container">
         <h2>Morning Lectures</h2>
         <div id="morning-lectures">
             <a href="algorithms.html" class="lecture-link">
                 <div class="lecture-section">
-                    <h3>Binary search</h3>
-                    <p>This process efficiently narrows down the search area by half each iteration, making binary search very fast for large, sorted arrays.</p>
+                    <h3>Binary Search</h3>
+                    <p>Binary search is an efficient algorithm for finding a target value within a sorted array by repeatedly dividing the search interval in half.</p>
                 </div>
             </a>
             <a href="bubblesort.html" class="lecture-link">
                 <div class="lecture-section">
                     <h3>Bubble Sort</h3>
-                    <p>The time complexity of bubble sort in the average and worst case is \(O(n^2)\), where \(n\) is the number of elements in the array. This is because, in the worst case, each element needs to be compared with every other element, leading to \(n(n-1)/2\) comparisons. In the best case, when the array is already sorted, the time complexity is \(O(n)\) due to the optimized version of bubble sort that stops if no swaps are needed during a pass.</p>
+                    <p> Bubble sort is a simple sorting algorithm that repeatedly steps through the list, compares adjacent elements, and swaps them if they are in the wrong order, effectively "bubbling" the largest unsorted element to its correct position in each pass.</p>
                 </div>
             </a>
             <a href="insertionsort.html" class="lecture-link">
                 <div class="lecture-section">
                     <h3>Insertion Sort</h3>
-                    <p>Insertion sort is a simple sorting algorithm that builds the final sorted array one element at a time by repeatedly taking the next element and inserting it into its correct position among the previously sorted elements. It is efficient for small data sets and partially sorted arrays, with an average and worst-case time complexity of \(O(n^2)\).</p>
+                    <p>Insertion sort is a straightforward sorting algorithm that builds the final sorted array one item at a time by repeatedly taking the next element and inserting it into its correct position among the previously sorted elements. </p>
                 </div>
             </a>
         </a>
-        <a href="selectionsort.html" class="lecture-link">
-            <div class="lecture-section">
-                <h3>Selection Sort</h3>
-                <p>Selection sort is a simple comparison-based sorting algorithm that repeatedly selects the smallest (or largest) element from the unsorted portion of the array and swaps it with the first unsorted element. It has a time complexity of \(O(n^2)\) for both average and worst cases due to the nested loops required for selecting and swapping elements.</p>
-            </div>
-        </a>
+
         </div>
     </div>
     <div id="afternoon-exercises-container">
@@ -42,7 +38,7 @@
             <a href="AfternoonExercises/Exercise1.html" class="exercise-link">
                 <div class="exercise-section">
                     <h3>Exercise 1</h3>
-                    <p>Content for exercise 1 goes here</p>
+                    <p>Find a Number in a Sorted Array</p>
                 </div>
             </a>
             <a href="AfternoonExercises/Exercise2.html" class="exercise-link">
