--- a/shenoa-e14/June 18 Day 30/index.html
+++ b/shenoa-e14/June 18 Day 30/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>June 17 Day 29</title>
+    <title>June 18 Day 30</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>June 17 Day 29</h1>
-    <h1>Algorithms</h1>
+    <h1>June 18 Day 30</h1>
+    <h1>Bubble Sort in Practice</h1>
     <div id="morning-lectures-container">
         <h2>Morning Lectures</h2>
         <div id="morning-lectures">
@@ -19,8 +19,8 @@
             </a>
             <a href="insertionsort.html" class="lecture-link">
                 <div class="lecture-section">
-                    <h3>Insertion Sort</h3>
-                    <p>Insertion sort is a straightforward sorting algorithm that builds the final sorted array one item at a time by repeatedly taking the next element and inserting it into its correct position among the previously sorted elements. </p>
+                    <h3>Time Complexity</h3>
+                    <p></p>
                 </div>
             </a>
         </a>
@@ -33,19 +33,19 @@
             <a href="AfternoonExercises/Exercise1.html" class="exercise-link">
                 <div class="exercise-section">
                     <h3>Exercise 1</h3>
-                    <p>Find a Number in a Sorted Array</p>
+                    <p>Bubble Sort Ascending</p>
                 </div>
             </a>
             <a href="AfternoonExercises/Exercise2.html" class="exercise-link">
                 <div class="exercise-section">
                     <h3>Exercise 2</h3>
-                    <p>Content for exercise 2 goes here</p>
+                    <p>Bubble Sort Descending</p>
                 </div>
             </a>
             <a href="AfternoonExercises/Exercise3.html" class="exercise-link">
                 <div class="exercise-section">
                     <h3>Exercise 3</h3>
-                    <p>Content for exercise 3 goes here</p>
+                    <p>Bubble Sort with Count</p>
                 </div>
             </a>
         </div>
